--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
   <div class="container">
     <div id="newsletter">
-      <h3>The Z|S Newsletter</h3>
+      <h3>The R|E Newsletter</h3>
       <div class="textwidget">
         <p>We don't email very often.  Months will go by. But when we do send one out, it is something you will want to read.</p>
         <form action="http://zis.us1.list-manage.com/subscribe/post?u=ee797f011a5773bf51af4e44c&amp;id=01e1e140f8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
