--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <h3>The R|E Newsletter</h3>
       <div class="textwidget">
         <p>We don't email very often.  Months will go by. But when we do send one out, it is something you will want to read.</p>
-        <form action="http://zis.us1.list-manage.com/subscribe/post?u=ee797f011a5773bf51af4e44c&amp;id=01e1e140f8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+        <form action="www.refernearn.ga/" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
           <input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL"><br>
           <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="margin-top:10px;"><br>
         </form>
@@ -15,19 +15,19 @@
       <div class="textwidget">
         <p style="color:#b3a6ad;">We want to hear from you.</p>
         <p>
-          <a href="{{site.github.url}}/contact/" class="fancybox button">Email Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://twitter.com/bryan_z" class="button">Follow Us on Twitter</a>
+          <a href="{{site.github.url}}/contact/" class="fancybox button">Email Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://twitter.com/" class="button">Follow Us on Twitter</a>
         </p>
       </div>
     </div>
     <div class="clear"></div>
     <div id="copyright">
       <div class="textwidget">
-        <p>All information and images are ©2016 Zises Strategic Communications and our respective clients.</p>
+        <p>All information and images are ©2018.</p>
       </div>
   	</div>
     <div id="credits">
       <div class="textwidget">
-        <p>Site by <a href="http://meskermichael.com" target="_blank">meskermichael.com</a> &amp; <a href="http://mesker.org" target="_blank">mesker.org</a>.</p>
+        <p>Site by <a href="http://refernearn.ga/" target="_blank">refernearn.ga/</a> &amp; <a href="http://refernearn.ga/" target="_blank">refernearn.ga</a>.</p>
       </div>
     </div>
   </div>
