--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
     <meta name="description" itemprop="description" content="Chicago public relations, communications and political consulting.">
     <meta name="keywords" itemprop="keywords" content="chicago, public, relations, strategic, communications, zises, 芝加哥, EB-5, crisis, issues, immigration, immigrant investor, 公共关系策略">
-    <link rel="canonical" href="http://www.zis.es/">
+    <link rel="canonical" href="http://www.refernearn.ga/">
 
     {% include googleAnalytics.html %}
 
